Updating project